--- a/maintenance-redesign.html
+++ b/maintenance-redesign.html
@@ -33,12 +33,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Sign Up</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="about.html">About</a></li>
 						</ul>
 					</nav>
 
@@ -211,7 +206,7 @@
 													Top-level visibility
 												</h3>
 												<p>
-													I added a module that would be the first thing that users see when they open the App. I was not concerned about this disrupting the user's timeline experience, since our metrics showed that the timeline wasn't being used very much by our users anyway. In a later sprint, we revisited the timeline and <a href="dashboard.html">turned it into a more useful dashboard</a>.
+													I added a module that would be the first thing that users see when they open the App. I was not concerned about this disrupting the user's timeline experience, since our metrics showed that the timeline wasn't being used very much by our users anyway. <i>In a later sprint, we revisited the timeline and <a href="dashboard.html">turned it into a more useful <strong>dashboard</strong></a>.</i>
 												</p>
 											</div>
 											<div class="4u 12u$(medium)">
@@ -230,9 +225,9 @@
 											<li><strong>Guest checkout:</strong> Maintenance was previously hidden behind the pay-wall. To drive first time adoption of maintenance, we made some of our maintenance features available from the logged-out experience.</li>
 											</ul>
 										<h3>
-											Make the flow more intuitive: Replacie chat-bot with form.
+											Make the flow more intuitive: Replac chat-bot with form.
 										</h3>
-										<p>Our hypothesis was also that many users would actually prefer a form to a chat-bot, due to the speed with which a form can be filled out and the simplicity of the process.  We built a reporting form, with plans to AB test this against our extant chat reporting method.</p>
+										<p>Our hypothesis was also that many users would actually prefer a form to a chat-bot, due to the speed with which a form can be filled out and the simplicity of the process.  We built a reporting form, with plans to AB test this against our extant chat reporting method. Anecdotally we were able to verify that the form was an improvement upon our previous chat bot reporting method. Unfortunately, we had difficulties with implementing the AB testing framework at this stage and we weren't able to verify with data the way we had hoped :/</p>
 										<div class="image main grow-img-scale">
 											<img class="grow-img-shadow" src="images/chat-problems.jpg" alt="old designs" title="old designs"/>
 											<i class="img-caption">chat vs form</i>
