--- a/dashboard.html
+++ b/dashboard.html
@@ -89,23 +89,28 @@
 									<h2>SPRINT 4: development & post-mortem</h2>
 									<p>Once we were ready, we passed off our designs to the engineering team for development.</p>
 									<p>Were we successful? Studying user behavior after we rolled out changes confirmed for me that this project was a success. Negative customer feedback pertaining to the timeline decreased drastically. Customers actively began using the new Rent view page. We felt confident that we had improved our product in a way that had vastly improved the fundamental experience for our users.</p>
+								<div class="bottom-nav">
+									<a href="maintenance-redesign.html">&#8592; Previous Project</a>
+									<a href="index.html" style="float: right;">View more work &#8594;</a>
+								</div>
 							</section>
 
 					</div>
 
-				<!-- Footer -->
+				<!-- footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
 					</footer>
+
 
 			</div>
 
