--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 										<a href="nestegg.html">View work</a>
 									</div>
 								<div class="6u 12u$(small) center-contents">
-									<a href="dashboard.html" class="img-link">
-										<img class="homepage-img" src="images/dashboard-mockup.png" alt="" style="width: 85%;"/>
+									<a href="nestegg.html" class="img-link">
+										<img class="homepage-img" src="images/resident-portal.png" style=""/>
 									</a>
 								</div>
 							</div>
