--- a/about.html
+++ b/about.html
@@ -71,20 +71,20 @@
 					</div>
 					</div>
 
-
-				<!-- Footer -->
+					<!-- footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
 					</footer>
+
 
 			</div>
 
