--- a/maintenance-redesign.html
+++ b/maintenance-redesign.html
@@ -254,19 +254,24 @@
 											<h3>Were we successful?</h3>
 											<p>We directly addressed some user pain-points, saw increased up-take of our maintenance product, and got positive feedback from our users. However, due to technical difficulties, we weren't able to use AB testing in the way that we had intended.<br /><br />One takeaway from this project was to improve our AB testing framework so that we could to verify our hypotheses with greater certainty.</p>
 									</div>
+
+									<div class="bottom-nav">
+										<a href="nestegg.html">&#8592; Previous Project</a>
+										<a href="dashboard.html" style="float: right;">Next Project &#8594;</a>
+									</div>
 							</section>
 
 					</div>
 
-				<!-- Footer -->
+<!-- footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
