--- a/nestegg.html
+++ b/nestegg.html
@@ -44,68 +44,53 @@
 							<section id="main" class="main">
 								<div class="inner project-inner">
 									<header class="major">
-										<h1>Timeline Redesign</h1>
-										<p class="subtitle">Problem statement: Our timeline / landing page isn't useful to our users.</h2>
+										<h1>NestEgg</h1>
+										<p class="subtitle">Design work for the next prop-tech unicorn.</h2>
 									</header>
-									<span class="image main"><img src="images/new-dashboard-hero.jpg" alt="" /></span>
-									<h2>SPRINT 1: investigation and research</h2>
-									<span class="image main"><img src="images/old-timeline.jpg" alt="" style="width: 75%; margin: auto;" /></span>
-									<h3>Usability issues:</h3>
-									<p>The Timeline was supposed to be the one-stop shop for users to check the status of their properties: Rent-collection status, Maintenance requests, and important notifications. However, analytics revealed that users were <strong>completely ignoring</strong> the timeline. Our research uncovered the following problems:</p>
-									<h3>OBSERVATION 1: Too much content</h3>
-									<p>We realized that notifications could quickly pile up, making the timeline overwhelming and unusable - especially if the landlord's portfolio included multiple properties.</p>
-									<span class="image main"><img src="images/timeline-problems.jpg" alt="" /></span>
-									<h3>OBSERVATION 2: Users want to know about rent</h3>
-									<p>Based on <strong>heatmaps</strong>, we noticed that the most common action for users when they entered the site was to click 'Transactions' in the navigation. This was further reinforced by user research which showed that the main use case for landlords entering the NestEgg app was to check their rent status. As a property owner, I want to know that I'm making money on my investment! However, our transactions page did not provide an easy, at-a-glance view of the user's rent status, so landlords were forced to manually add together transaction line items to figure out how much they were still owed for the month.</li>
-									</ul></p>
-									<span class="image main"><img src="images/transactions-desktop.jpg" alt="" /></span>
-									<h2>SPRINT 2: CONCept development and prototyping</h2>
-									<p>The next step was to begin to tackle solutions. We began by wireframing redesigns, which we honed with the help of internal testing and multiple feedback sessions with our stakeholders and product team. We drilled down to a few crucial changes that we wanted to make to our product.</p>
-									<div class="image main">
-										<img src="images/wireframes.jpg" alt="old designs" title="old designs"/>
-										<i class="img-caption">Wireframes</i>
+									<div class="content-block">
+										<p>
+											NestEgg is an app that aims to replace traditional property managers by empowering mom and pop landlords to easily self-manage their own portfolios. Imagine rent-collection, a maintenance app like Angie's list, and a personal automated concierge, all rolled into one. (To learn more, check out our <a href="https://nestegg.rent/">website.</a>)
+											<br/><br/>
+											I joined NestEgg in 2018 in a hybrid dev/design role. In 2020, our Design Director left, and I stepped up to fill in his shoes. I had the privilege of helping pilot our product into a successful series-A of 14M. Below are some of the key features that I built along the way (If you'd like to see a more in-depth description of my design process, check out my <a href="maintenance-redesign.html">maintenance redesign project</a> or my <a href="dashboard.html">timeline redesign project.</a>):
+										</p>
 									</div>
-									<h2>SPRINT 3: USER TESTING & ITERATION</h2>
-									<p>After clarifying our direction, we created hi-fidelity mockups and conducted user research sessions to affirm that our changes would be beneficial to the User Experience. </p>
-									<h3>CHANGE 1: New dashboard</h3>
-									<p>Because the timeline had become unusable, I replaced the timeline with a dashboard that would provide an at-a-glance answer to the key questions that most of our users were logging into our App with.  Since we identified that the most prominent of those questions was, "has my rent been collected?", we prominently featured a new rent summary module at the top of the page. To prevent the dashboard from having an overwhelming amount of content, I limited the number of notifications that could appear in each module.</p>
-									<span class="image main"><img class="img-shadow grow-img-scale" src="images/dashboard-desktop.jpg" alt="" /></span>
-									<h3>Change 2: New rent view</h3>
-									<p>For deeper insights into the user's rent status across their whole portfolio, we added a 'Rent view'. Since users were mainly concerned about which properties had NOT completed rent collection for the month, we allowed users to easily sort the view by 'Outstanding balances'.</p>
-									<div class="image main grow-img-scale">
-										<img class="img-shadow" src="images/rent-view-overview.jpg" alt="" />
-										<i class="img-caption">New rent view, w/ 2 properties</i>
+									<h3 style="z-index: 4; text-align: center; margin-bottom: 4em;">Resident portal</h3>
+									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+										<img src="images/resident-portal.png" alt=""/>
 									</div>
-									<p>Selecting a unit (e.g. '8 Avondale Lndg') in the table of outstanding balances opens a page which shows the rent collection status by resident:</p>
-									<div class="image main grow-img-scale">
-										<img class="img-shadow" src="images/property-page.jpg" alt="" />
-										<i class="img-caption">Rent view for a single property</i>
+									<h3 style="z-index: 4; text-align: center; margin-bottom: 4em;">NestEggPay - interest-free financing</h3>
+									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+										<img src="images/nestegg-pay.png" alt=""/>
 									</div>
-									<p>While we were at, I updated our transactions page as well to make it more easily scannable!</p>
-									<div class="image main grow-img-scale">
-										<img class="img-shadow" src="images/all-transactions.jpg" alt="" />
-										<i class="img-caption">New Transactions page</i>
+									<h3 style="z-index: 4; text-align: center; margin-bottom: 6em;">Landing page redesign</h3>
+									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+										<img src="images/homepage.png" style="width: 110%; position: relative; right: 2em" alt=""/>
 									</div>
-									<h2>SPRINT 4: development & post-mortem</h2>
-									<p>Once we were ready, we passed off our designs to the engineering team for development.</p>
-									<p>Were we successful? Studying user behavior after we rolled out changes confirmed for me that this project was a success. Negative customer feedback pertaining to the timeline decreased drastically. Customers actively began using the new Rent view page. We felt confident that we had improved our product in a way that had vastly improved the fundamental experience for our users.</p>
+									<h3 style="z-index: 4; text-align: center; margin-bottom: 6em;">Upkeep portal</h3>
+									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+										<img src="images/upkeep.png" alt=""/>
+									</div>
+							<div class="">
+								<!-- <a href="maintenance-redesign.html">&#8592; Previous Project</a> -->
+								<a href="maintenance-redesign.html" style="float: right;">Next Project &#8594;</a>
+							</div>
 							</section>
 
 					</div>
-
-				<!-- Footer -->
+					<!-- footer -->
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
 					</footer>
+
 
 			</div>
 
