--- a/dashboard.html
+++ b/dashboard.html
@@ -86,7 +86,7 @@
 										<img class="img-shadow" src="images/all-transactions.jpg" alt="" />
 										<i class="img-caption">New Transactions page</i>
 									</div>
-									<h2>SPRINT 4: development & post-mortem</h2>
+									<h2>SPRINT 4: development & conclusion</h2>
 									<p>Once we were ready, we passed off our designs to the engineering team for development.</p>
 									<p>Were we successful? Studying user behavior after we rolled out changes confirmed for me that this project was a success. Negative customer feedback pertaining to the timeline decreased drastically. Customers actively began using the new Rent view page. We felt confident that we had improved our product in a way that had vastly improved the fundamental experience for our users.</p>
 								<div class="bottom-nav">
