--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
+				<a href="#banner" class="more">Learn More</a>
 
 				<!-- Header -->
 					<header id="header">
@@ -54,23 +55,21 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">With a background in CS, graphic design, and writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Thanks for taking time to view my work!</p>
+							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto; letter-spacing: 0.7px;">With a background in Computer Science, Graphic Design, and Content Writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the effect of technology on our lives. Thanks for taking time to view my work!</p>
 							<ul class="actions">
 								<li><a href="about.html" class="button special big">About me</a></li>
 							</ul>
 						</div>
-
-						<a href="#one" class="more">Learn More</a>
+						<!-- <a href="#banner" class="more">Learn More</a> -->
 					</section>
 				<!-- Wrapper -->
 					<div id="wrapper">
-
 						<!-- Two -->
 							<section id="two" class="main">
-								<div class="inner spotlight alt style2">
-									<div class="content 6u 12u$(small)">
+								<div class="inner-bigger spotlight alt style2">
+									<div class="content 5u 12u$(small)">
 										<header>
-											<h2>NestEgg: from seed to series-A</h2>
+											<h2>NestEgg: Seed to Series-A</h2>
 										</header>
 										<p>Helping build the next prop-tech unicorn from (almost) scratch.</p>
 										<div class="roles">
@@ -86,7 +85,7 @@
 										</div>
 										<a href="nestegg.html">View work</a>
 									</div>
-								<div class="6u 12u$(small) center-contents">
+								<div class="7u 12u$(small) center-contents">
 									<a href="nestegg.html" class="img-link">
 										<img class="homepage-img" src="images/resident-portal.png" style=""/>
 									</a>
@@ -96,8 +95,8 @@
 
 						<!-- One -->
 							<section id="one" class="main">
-								<div class="inner spotlight">
-									<div class="content 6u 12u$(small)">
+								<div class="inner-bigger spotlight">
+									<div class="content 5u 12u$(small)">
 										<header>
 											<h2>Nestegg maintenance redesign</h2>
 										</header>
@@ -113,11 +112,7 @@
 										</div>
 									<a href="maintenance-redesign.html">View project</a>
 									</div>
-									<!--
-										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-										320x340 or at least the same aspect ratio (16:17).
-									-->
-									<div class="6u 12u$(small) center-contents">
+									<div class="7u 12u$(small) center-contents">
 										<a href="maintenance-redesign.html" class="img-link">
 											<img class="homepage-img" src="images/maint1-homepage-shot.jpg" alt="" />
 										</a>
@@ -127,12 +122,12 @@
 
 						<!-- Two -->
 							<section id="two" class="main">
-								<div class="inner spotlight alt style2">
-									<div class="content 6u 12u$(small)">
+								<div class="inner-bigger spotlight alt style2">
+									<div class="content 5u 12u$(small)">
 										<header>
 											<h2>NestEgg Dashboard Redesign</h2>
 										</header>
-										<p>I redesigned the key landing page in our App to better address user's primary use cases.</p>
+										<p>I redesigned the key landing page in our App to better address our users' primary use cases.</p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
@@ -143,9 +138,9 @@
 										</div>
 										<a href="dashboard.html">View project</a>
 									</div>
-								<div class="6u 12u$(small) center-contents">
+								<div class="7u 12u$(small) center-contents">
 									<a href="dashboard.html" class="img-link">
-										<img class="homepage-img" src="images/dashboard-mockup.png" alt="" style="width: 85%;"/>
+										<img class="homepage-img" src="images/dashboard-mockup.png"/>
 									</a>
 								</div>
 							</div>
@@ -153,12 +148,12 @@
 
 						<!-- Three -->
 							<section id="one" class="main">
-								<div class="inner spotlight style1">
-									<div class="6u 12u$(small)">
+								<div class="inner-bigger spotlight style1">
+									<div class="5u 12u$(small)">
 										<header>
 											<h2>Impetus</h2>
 										</header>
-										<p>Impetus is a crowdfunding application inspired by Kickstarter.com. Users can create campaigns for projects they are passionate about, raise funds, and financially back other users' projects.<br/><br/>
+										<p>Impetus is a crowdfunding application inspired by Kickstarter.com, built to drive social change.<br/><br/>
 										<i>Created with Ruby on Rails and React/Redux.</i>
 									</p>
 									<div class="roles">
@@ -172,11 +167,10 @@
 									<a href="https://impetus-live.herokuapp.com/#/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 									<a href="https://github.com/noahskang/Impetus">Github</a>
 									&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									<!-- <a href="https://github.com/noahskang/Impetus">Comps</a> -->
 								</div>
-								<div class="6u 12u$(small) center-contents">
+								<div class="7u 12u$(small) center-contents">
 									<a href="https://impetus-live.herokuapp.com" class="img-link">
-										<img style="width: 97%;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
+										<img class="homepage-img" src="images/impetus-mockup.png" alt="" />
 									</a>
 								</div>
 							</div>
@@ -184,13 +178,13 @@
 
 						<!-- Four -->
 							<section id="two" class="main">
-								<div class="inner spotlight alt style2">
-									<div class="6u 12u$(small)">
+								<div class="inner-bigger spotlight alt style2">
+									<div class="5u 12u$(small)">
 										<header>
 											<h2>Supernacho</h2>
 										</header>
-										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
-										<i>Created with HTML5 and vanilla JavaScript (ES6).</i></p>
+										<p>Supernacho is a side-scrolling browser game with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
+										<i>Created with HTML5 and Vanilla JavaScript (ES6).</i></p>
 										<div class="roles">
 											<span class="roles-chip">
 												UX/UI Design
@@ -202,7 +196,7 @@
 										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 										<a href="https://github.com/noahskang/SuperNacho">Github</a>
 									</div>
-									<div class="6u 12u$(small) center-contents">
+									<div class="7u 12u$(small) center-contents">
 										<a href="https://impetus-live.herokuapp.com" class="img-link">
 											<img style="width: 97%;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795774/macbook-pro-black-screen_qfi8gj.jpg" alt=""/>
 										</a>
@@ -212,8 +206,8 @@
 
 						<!-- Five -->
 							<section id="three" class="main">
-								<div class="inner spotlight style3">
-										<div class="content 6u 12u$(small)">
+								<div class="inner-bigger spotlight style3">
+										<div class="content 5u 12u$(small)">
 											<header>
 												<h2>Transitninja</h2>
 											</header>
@@ -233,7 +227,7 @@
 										<a href="https://noahskang.github.io/TransitNinja-Demo/">Demo Page</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 										<a href="https://github.com/noahskang/transitninja-1">Github</a>
 									</div>
-									<div class="6u 12u$(small) center-contents">
+									<div class="7u 12u$(small) center-contents">
 										<a href="https://noahskang.github.io/TransitNinja-Demo" class="img-link">
 											<img src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_280/v1502714608/busview_e5naet.png" alt="">
 										</a>
@@ -242,7 +236,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<div class="inner">
+						<div class="inner-bigger">
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
