--- a/nestegg.html
+++ b/nestegg.html
@@ -47,43 +47,47 @@
 										<h1>NestEgg</h1>
 										<p class="subtitle">Design work for the next prop-tech unicorn.</h2>
 									</header>
+									<span class="image main"><img src="images/nestegg-summary.jpg" alt="" /></span>
 									<div class="content-block">
 										<h3>What is NestEgg?</h3>
 										<p>
-											Imagine a rent-collection app, an on-demand service like Angie's list, and a personal automated concierge, all rolled into one, and you've got something beginning to look like NestEgg. At NestEgg, our aim is to replace traditional property managers by empowering mom and pop landlords to easily self-manage their own portfolios. (To learn more, check out our <a href="https://nestegg.rent/">website.</a>)
+											At NestEgg, our aim is to replace traditional property managers by empowering mom and pop landlords to easily self-manage their own portfolios. (To learn more, check out our <a href="https://nestegg.rent/">website.</a>)
 									</p>
 									<h3>My role</h3>
 									<p>
-											I joined NestEgg in 2018 in a hybrid dev/design role. In 2020, our Design Director left, and I stepped up to fill in his shoes, taking over product design for the company. I had the privilege of helping pilot our product into a <strong>successful series-A</strong> of 14M.
+											I joined NestEgg in 2018 in a hybrid dev/design role. In 2020, our Design Director left, and I stepped up to fill in his shoes, taking over product design for the company. I had the privilege of helping pilot our product into a <strong>successful series-A</strong> of 14M, working cross-functionally with a product manager and a team of engineers.
 										</p>
 										<h3>Sample of work</h3>
 										 Keep scrolling to view mockups/concepts of some of the key features I've built!<br/><br/>
-										 <i>(If you'd like to see a more in-depth description of my design process, check out my <a href="maintenance-redesign.html">maintenance redesign project</a> or my <a href="dashboard.html">timeline redesign project.</a>)</i>
+										 <i>(If you'd like to take a look at deep-dives of my design process, check out my <a href="maintenance-redesign.html">maintenance redesign project</a> or my <a href="dashboard.html">timeline redesign project.</a>)</i>
 									</div>
+								</div>
+
+								<div class="inner-bigger">
 									<h3 style="z-index: 4; text-align: center;">Resident portal</h3>
 									<p style="text-align: center; margin-bottom: 4em;">Designed a new onboarding experience, dashboard, and payment settings page.</p>
-									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+									<div class="image main img-link" style="margin-bottom: 6em;">
 										<img src="images/resident-portal.png" alt=""/>
 									</div>
 									<h3 style="z-index: 4; text-align: center">NestEggPay</h3>
 									<p style="text-align: center; margin-bottom: 4em;">Rolled out new 'NestEggPay' feature, providing landlords with the ability to pay for expenses later with installments out of their future rental income.</p>
-									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+									<div class="image main img-link" style="margin-bottom: 6em;">
 										<img src="images/nestegg-pay.png" alt=""/>
 									</div>
 									<h3 style="z-index: 4; text-align: center">Landing page redesign</h3>
 									<p style="text-align: center; margin-bottom: 6em;">Redesigned the homepage and all the logged out landing pages - writing content, creating graphics, and also coding most of the pages.</p>
-									<div class="image main grow-img-scale" style="margin-bottom: 6em;">
+									<div class="image main img-link" style="margin-bottom: 6em;">
 										<img src="images/homepage.png" style="width: 110%; position: relative; right: 2em" alt=""/>
 									</div>
 									<h3 style="z-index: 4; text-align: center;">Upkeep portal</h3>
 									<p style="margin-bottom: 6em; text-align: center;">Created a new portal to allow landlords to keep track of their subscriptions to our ongoing upkeep services.</p>
-									<div class="image main grow-img-scale" style="margin-bottom: 6em; position: relative; left: 3em;">
+									<div class="image main img-link" style="margin-bottom: 6em; position: relative; left: 3em;">
 										<img src="images/upkeep.png" alt=""/>
 									</div>
-							<div class="">
-								<!-- <a href="maintenance-redesign.html">&#8592; Previous Project</a> -->
-								<a href="maintenance-redesign.html" style="float: right;">Next Project &#8594;</a>
-							</div>
+								</div>
+								<div class="inner">
+									<a href="maintenance-redesign.html" style="float: right;">Next Project &#8594;</a>
+								</div>
 							</section>
 
 					</div>
